# CMake-Cpp-Template

./: CMakeLists.txt  README.md
cmake/: Base.cmake  BaseOptions.cmake
scripts/: gen_project.py
source/: main.cpp
tests/: CMakeLists.txt
